--- a/WebApplication1/Pages/Index.cshtml
+++ b/WebApplication1/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to the jungle, komoly szerkesztett app-ok vannak</h1>
+    <h1 class="display-4">Welcome to the jungle, komoly szerkesztett app-ok vannak, TESZT DEVOPS</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
